# django-filthyfields

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  TODO.md  latest  mkdocs.yml  pyproject.toml  setup.py  versions.json
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
0.1.0a3/: 404.html  index.html  sitemap.xml
0.1.0a3/getting-started/installation/: index.html
0.1.0a3/getting-started/quickstart/: index.html
0.1.0a3/guide/advanced/: index.html
0.1.0a3/guide/basic-usage/: index.html
0.1.0a3/reference/api/: index.html
0.1.0a3/reference/changelog/: index.html
0.1.0a3/search/: search_index.json
1.9.8b1/: 404.html  index.html  sitemap.xml
1.9.8b1/getting-started/installation/: index.html
1.9.8b1/getting-started/quickstart/: index.html
1.9.8b1/guide/advanced/: index.html
1.9.8b1/guide/basic-usage/: index.html
1.9.8b1/reference/api/: index.html
1.9.8b1/reference/changelog/: index.html
1.9.8b2/: 404.html  index.html  sitemap.xml
1.9.8b2/getting-started/installation/: index.html
1.9.8b2/getting-started/quickstart/: index.html
1.9.8b2/guide/advanced/: index.html
1.9.8b2/guide/basic-usage/: index.html
1.9.8b2/reference/api/: index.html
1.9.8b2/reference/changelog/: index.html
1.9.8b3/: 404.html  index.html  sitemap.xml
1.9.8b3/getting-started/installation/: index.html
1.9.8b3/getting-started/quickstart/: index.html
1.9.8b3/guide/advanced/: index.html
1.9.8b3/guide/basic-usage/: index.html
1.9.8b3/reference/api/: index.html
1.9.8b3/reference/changelog/: index.html
1.9.8b3/search/: search_index.json
1.9.8b4/: 404.html  index.html  sitemap.xml
1.9.8b4/getting-started/installation/: index.html
1.9.8b4/getting-started/quickstart/: index.html
1.9.8b4/guide/advanced/: index.html
1.9.8b4/guide/basic-usage/: index.html
1.9.8b4/reference/api/: index.html
1.9.8b4/reference/changelog/: index.html
1.9.8b4/search/: search_index.json
1.9.8b5/: 404.html  index.html  sitemap.xml
1.9.8b5/getting-started/installation/: index.html
1.9.8b5/getting-started/quickstart/: index.html
1.9.8b5/guide/advanced/: index.html
1.9.8b5/guide/basic-usage/: index.html
1.9.8b5/reference/api/: index.html
1.9.8b5/reference/changelog/: index.html
1.9.8b5/search/: search_index.json
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/getting-started/installation/: index.html
2.0.0/getting-started/quickstart/: index.html
2.0.0/guide/advanced/: index.html
2.0.0/guide/basic-usage/: index.html
2.0.0/reference/api/: index.html
2.0.0/reference/changelog/: index.html
2.0.0/search/: search_index.json
2.0.1/: 404.html  index.html  sitemap.xml
2.0.1/getting-started/installation/: index.html
2.0.1/getting-started/quickstart/: index.html
2.0.1/guide/advanced/: index.html
2.0.1/guide/basic-usage/: index.html
2.0.1/reference/api/: index.html
2.0.1/reference/changelog/: index.html
2.0.1/search/: search_index.json
2.0.2/: 404.html  index.html  sitemap.xml
2.0.2/getting-started/installation/: index.html
2.0.2/getting-started/quickstart/: index.html
2.0.2/guide/advanced/: index.html
2.0.2/guide/basic-usage/: index.html
2.0.2/reference/api/: index.html
2.0.2/reference/changelog/: index.html
2.0.2/search/: search_index.json
2.0.3/: 404.html  index.html  sitemap.xml
2.0.3/getting-started/installation/: index.html
2.0.3/getting-started/quickstart/: index.html
2.0.3/guide/advanced/: index.html
2.0.3/guide/basic-usage/: index.html
2.0.3/reference/api/: index.html
2.0.3/reference/changelog/: index.html
2.1.0/: 404.html  index.html  sitemap.xml
2.1.0/getting-started/installation/: index.html
2.1.0/getting-started/quickstart/: index.html
2.1.0/guide/advanced/: index.html
2.1.0/guide/basic-usage/: index.html
2.1.0/reference/api/: index.html
2.1.0/reference/changelog/: index.html
benchmarks/: benchmark.py
dev/: 404.html  index.html  sitemap.xml
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/advanced/: index.html
dev/guide/basic-usage/: index.html
dev/reference/api/: index.html
dev/reference/changelog/: index.html
dev/search/: search_index.json
docs/: advanced.rst  conf.py  description.rst  index.md  index.rst  quickstart.rst
docs/getting-started/: installation.md  quickstart.md
docs/guide/: advanced.md  basic-usage.md
docs/reference/: api.md  changelog.md
docs/superpowers/plans/: 2026-04-06-async-support.md
docs/superpowers/specs/: 2026-04-06-async-support-design.md
src/dirtyfields/: __init__.py  _descriptor.py  _fast_set.py  compare.py  dirtyfields.py
src/filthyfields/: __init__.py  _descriptor.py  filthyfields.py
tests/: _benchmark_common.py  _upstream_benchmark_runner.py  benchmark.py  benchmark_settings.py  django_settings.py  models.py  test_async.py  test_benchmark.py  test_core.py  test_fields.py  test_m2m_fields.py  test_non_regression.py  test_save_fields.py  test_timezone_aware_fields.py  utils.py
