[project]
name = "django-filthyfields"
version = "1.9.8b8"
description = "Tracking dirty fields on a Django model instance."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.14"
keywords = [
  "django",
  "filthyfields",
  "dirtyfields",
  "track",
  "model",
  "changes",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["Django>=6.0"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-filthyfields"
Documentation = "https://oliverhaas.github.io/django-filthyfields/"
Repository = "https://github.com/oliverhaas/django-filthyfields.git"

[dependency-groups]
dev = [
  "cython>=3.2.4",
  "django-stubs==6.0.3",
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-xdist==3.8.0",
  "ruff==0.15.12",
  "setuptools>=80.10.1",
  "ty==0.0.32",
]
docs = ["mkdocs==1.6.1", "mkdocs-material==9.7.6", "mike==2.2.0"]

[build-system]
requires = ["setuptools>=80", "cython>=3.2.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dirtyfields = ["py.typed"]

[tool.setuptools.exclude-package-data]
dirtyfields = ["*.c", "*.html"]

# cibuildwheel config — builds the wheel matrix in CI.
# We target cp314 and cp314t (free-threaded) because that's our supported runtime.
[tool.cibuildwheel]
build = ["cp314-*", "cp314t-*"]
enable = ["cpython-freethreading"]
build-verbosity = 1
# Smoke-test the wheel: configure a minimal Django (no apps), then import
# the compiled descriptor. Importing `dirtyfields` triggers loading
# `DirtyFieldsMixin`, which is a Django Model subclass and so needs apps
# ready — `settings.configure() + django.setup()` with empty INSTALLED_APPS
# is the smallest viable setup.
test-command = "python -c \"from django.conf import settings; settings.configure(INSTALLED_APPS=[]); import django; django.setup(); from dirtyfields._descriptor import DiffDescriptor; print(DiffDescriptor)\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["docs"]

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
explicit-preview-rules = true
fixable = ["ALL"]
ignore = [
  "ANN401",  # Any needed for Django's dynamic APIs
  "ARG001",  # Signal handlers and overrides have required signatures
  "ARG002",
  "C901",    # Some functions are inherently complex
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings - too extensive
  "DJ012",   # Method order in models follows our conventions
  "E5",      # 120 char limit is sufficient
  "EM101",   # Extracting exception messages to variables hurts readability
  "EM102",
  "FBT001",  # Boolean traps - Django conventions use booleans extensively
  "FBT002",
  "N802",    # Naming follows Django conventions
  "N806",
  "PLC0415", # Lazy imports for optional dependencies
  "PLR1704", # Redefining argument in context manager
  "RUF005",  # Tuple concatenation is clearer
  "RUF012",  # Class-level mutable defaults are fine for our mixin pattern
  "RUF015",  # Readability over micro-optimization
  "RUF059",  # Keep unused variables explicit
  "SLF001",  # Private member access needed for Django internals
  "TRY003",  # Long exception messages are fine
]
preview = true
select = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "A002",    # Shadowing builtins in test utilities
  "ANN",     # No type annotations required in tests
  "ARG004",  # Unused args in signal handlers
  "DJ001",   # null=True on CharField for test models is fine
  "DJ008",   # Test models don't need __str__
  "N801",    # Test utilities don't need CapWords
  "PLR0913", # Too many arguments in test fixtures
  "PLR2004", # Magic values in tests are fine
  "S101",    # assert in tests
  "SIM117",  # Nested with for query assertions is clearer
  "TRY301",  # Raise in tests is fine
]
"tests/test_benchmark.py" = [
  "T201",    # print() is the output mechanism for the benchmark summary
  "PLR0915", # Scenario bodies have many statements by design
  "S607",    # `uv` is on PATH; we deliberately invoke it without a full path
]
"tests/test_timezone_aware_fields.py" = [
  "DTZ001", # Naive datetime is intentional for timezone testing
  "DTZ005", # Naive datetime.now() is intentional for timezone testing
  "UP017",  # timezone.utc used for test clarity
]
"src/dirtyfields/_descriptor.py" = [
  "PLR0911", # Many returns are inherent to the descriptor tracking logic
  "PLR0912", # Many branches are inherent to the descriptor tracking logic
]

[tool.pytest.ini_options]
django_find_project = false
DJANGO_SETTINGS_MODULE = "tests.django_settings"
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = ["error"]
addopts = ["-m", "not benchmark"]
markers = [
  "unit: marks tests as unit tests",
  "integration: marks tests as integration tests",
  "benchmark: marks tests as benchmarks (skipped by default; run with `-m benchmark`)",
]

[tool.coverage.run]
concurrency = ["thread"]
branch = true
source = ["dirtyfields"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.django_settings"
